[gd_scene load_steps=2 format=3 uid="uid://cqrtgp4oajsdc"]

[ext_resource type="Script" path="res://scenes/Start Menu/start_menu.gd" id="1_ppsin"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ppsin")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -68.0
offset_right = 60.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title Margin Container" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="Title Center Container" type="CenterContainer" parent="VBoxContainer/Title Margin Container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title Label" type="Label" parent="VBoxContainer/Title Margin Container/Title Center Container"]
layout_mode = 2
text = "Jelly Drip Castle"
horizontal_alignment = 1

[node name="Options Vbox Container" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start Button" type="MenuButton" parent="VBoxContainer/Options Vbox Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Start"
flat = false

[node name="Shop Button" type="MenuButton" parent="VBoxContainer/Options Vbox Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Shop
"
flat = false

[node name="Exit Button" type="MenuButton" parent="VBoxContainer/Options Vbox Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Exit"
flat = false

[connection signal="button_down" from="VBoxContainer/Options Vbox Container/Start Button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Options Vbox Container/Shop Button" to="." method="_on_shop_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Options Vbox Container/Exit Button" to="." method="_on_exit_button_button_down"]
